# AgentTrace

./: .gitignore  README.md  agenttrace.example.toml  pyproject.toml
docs/: architecture.md  connectors.md  roadmap.md
examples/data/: claude_code.ndjson  codex_cli.ndjson  entra_id.ndjson  wso2.ndjson
scripts/: bootstrap.sh
src/agenttrace/: __init__.py  __main__.py  cli.py  config.py  correlation.py  models.py  pipeline.py  runtime.py  services.py  tui.py
src/agenttrace/connectors/: __init__.py  base.py  entra_id.py  local_feeds.py
src/agenttrace/storage/: __init__.py  file_store.py  sqlite_index.py
tests/: test_correlation.py  test_entra_integration.py  test_pipeline.py  test_services.py  test_tui.py
